# PKUElective

./: .gitignore  IMPLEMENTATION_GUIDE.md  config.sample.ini  main.py  pyproject.toml
autoelective/: client.py  config.py  loop.py
autoelective/captcha/: proxy.py
