[project]
name = "pkuelective2022spring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "flask>=3.1.3",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "requests>=2.32.5",
]
